@@ -1,3 +1,13 @@
+2009-12-11  Eric Roman  <eroman@chromium.org>
+
+        Unreviewed build fix.
+
+        [V8] Add a method on ScriptController to get it compiling after http://trac.webkit.org/changeset/52033.
+
+        * bindings/v8/ScriptController.cpp:
+        (WebCore::ScriptController::anyPageIsProcessingUserGesture):
+        * bindings/v8/ScriptController.h:
+
 2009-12-11  Geoffrey Garen  <ggaren@apple.com>
 
         Reviewed by Sam Weinig.
